logs/steinitz.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/steinitz'...
Listing './lib/python3.5/site-packages/steinitz/icon'...
Listing './lib/python3.5/site-packages/steinitz/style'...
Listing './lib/python3.5/site-packages/steinitz/style/1'...
Listing './lib/python3.5/site-packages/steinitz/style/10'...
Listing './lib/python3.5/site-packages/steinitz/style/11'...
Listing './lib/python3.5/site-packages/steinitz/style/12'...
Listing './lib/python3.5/site-packages/steinitz/style/13'...
Listing './lib/python3.5/site-packages/steinitz/style/14'...
Listing './lib/python3.5/site-packages/steinitz/style/15'...
Listing './lib/python3.5/site-packages/steinitz/style/16'...
Listing './lib/python3.5/site-packages/steinitz/style/17'...
Listing './lib/python3.5/site-packages/steinitz/style/2'...
Listing './lib/python3.5/site-packages/steinitz/style/3'...
Listing './lib/python3.5/site-packages/steinitz/style/4'...
Listing './lib/python3.5/site-packages/steinitz/style/5'...
Listing './lib/python3.5/site-packages/steinitz/style/6'...
Listing './lib/python3.5/site-packages/steinitz/style/7'...
Listing './lib/python3.5/site-packages/steinitz/style/8'...
Listing './lib/python3.5/site-packages/steinitz/style/9'...
Compiling './lib/python3.5/site-packages/steinitz/utils.py'...
***   File "./lib/python3.5/site-packages/steinitz/utils.py", line 67
    print 'flag', flag
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/steinitz-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
